[package]
name = "directed-graph"
description = "A directed graph implementation in Rust"
version = "0.1.0"
authors = ["trislu <lukai@mail.ustc.edu.cn>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trislu/directed-graph"
edition = "2024"
rust-version = "1.90"

[dependencies]
indexmap = "2.13.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
